# mdviewer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  example.md  stoicism.md
macos/: Launcher.swift
scripts/: bundle-macos.sh
src/: app.rs  config.rs  files.rs  ipc.rs  lib.rs  main.rs  theme.rs
src/glow/: list.rs  mod.rs  render.rs  style.rs
src/theme/: catppuccin.rs  default.rs  fonts.rs  glow.rs  glow_latte.rs  mod.rs
