[package]
name = "mdviewer"
version = "0.1.0"
edition = "2021"
description = "Minimal markdown viewer for macOS"
authors = ["Matt Dennis"]

[dependencies]
anyhow = "1"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.34"
egui_commonmark = { version = "0.23", features = ["better_syntax_highlighting"] }
rfd = "0.15"

[dev-dependencies]
tempfile = "3"
